# html-to-rsx-ui

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  Taskfile.yml  build.rs  input.css  package.json  pnpm-lock.yaml  tailwind.config.js
assets/: tailwind-release.css  tailwind.css
scripts/: release.nu
src/: app.rs  main.rs  ui.rs
