[package]
name = "html-to-rsx-ui"
version = "0.1.2"
authors = ["Ilia <30232564+umnovI@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["desktop"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
regex = { version = "1.10.4", features = ["std"] }

# html to rsx parser
rsx-rosetta = "0.5.1"
html_parser = "0.7.0"
dioxus-autofmt = "0.5.1"
anyhow = "1.0.81"
copypasta = "0.10.1"

[profile.release]
debug = false

[features]
bundle = []

[build-dependencies]
winres = "0.1.12"
